@@ -2,6 +2,6 @@ SUBDIRS = plugin
 
 EXTRA_DIST = $(wildcard *.avg) $(wildcard *.png) $(wildcard *.jpg) $(wildcard *.tif) \
 	$(wildcard *.py)  \
-	$(wildcard baseline/*.png) $(wildcard testmediadir/*)
+	$(wildcard baseline/*.png) $(wildcard testmediadir/*) $(wildcard extrafonts)
 
 TESTS= Test.py
