@@ -1,3 +1,7 @@
+libavg 0.9.0.pre3 - August 20, 2009
+
+  svn rev. 4086
+
 libavg 0.9.0.pre2 - August 11, 2009
 
   svn revision 4066
